src/components/sbb-title/sbb-title.scss
@use '../../global/styles' as sbb;

// Default component properties, defined for :host. Properties which can not
// travel the shadow boundary are defined through this mixin
@include sbb.host-component-properties;

:host {
  --sbb-title-text-color-normal: var(
    --sbb-title-text-color-normal-override,
    var(--sbb-color-charcoal-default)
  );
  --sbb-title-margin-block-start: 0;
  --sbb-title-margin-block-end: 0;

  margin-block-start: var(--sbb-title-margin-block-start);
  margin-block-end: var(--sbb-title-margin-block-end);
}

// stylelint-disable plugin/stylelint-bem-namics
:host(:where(:not([visually-hidden]))) {
  --sbb-title-margin-block-start: var(--sbb-spacing-responsive-m);
  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xs);
}

// Due to using :where, order does matter
:host(:where([level='5']:not([visual-level]), [visual-level='5']):where(:not([visually-hidden]))) {
  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-5x);
}

// Due to using :where, order does matter
:host(:where([level='6']:not([visual-level]), [visual-level='6']):where(:not([visually-hidden]))) {
  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-4x);
}

:host([negative]) {
  @include sbb.title--negative;
}

.sbb-title {
  @include sbb.font-smoothing;

  color: var(--sbb-title-text-color-normal);

  :host([visually-hidden]) & {
    @include sbb.screen-reader-only;
  }

  &[id] {
    @include sbb.scroll-margin-block-start;
  }

  :host(:is([level='1']:not([visual-level]), [visual-level='1'])) & {
    @include sbb.title-1($exclude-spacing: true);
  }

  :host(:is([level='2']:not([visual-level]), [visual-level='2'])) & {
    @include sbb.title-2($exclude-spacing: true);
  }

  :host(:is([level='3']:not([visual-level]), [visual-level='3'])) & {
    @include sbb.title-3($exclude-spacing: true);
  }

  :host(:is([level='4']:not([visual-level]), [visual-level='4'])) & {
    @include sbb.title-4($exclude-spacing: true);
  }

  :host(:is([level='5']:not([visual-level]), [visual-level='5'])) & {
    @include sbb.title-5($exclude-spacing: true);
  }

  :host(:is([level='6']:not([visual-level]), [visual-level='6'])) & {
    @include sbb.title-6($exclude-spacing: true);
  }
  // stylelint-enable plugin/stylelint-bem-namics
}

